# backend

./: .gitignore  .space.kts  Makefile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  portainer-agent-stack.yml  pull-run-k8s.sh  pull-run.sh  pyproject.toml
server/: Dockerfile  Makefile  conftest.py  log_conf.json  manage.py  pyproject.toml  pytest.ini  setup.cfg
server/apps/core/: apps.py  exception_handler.py  views.py
server/apps/core/admin/: __init__.py  file.py
server/apps/core/consumer/: base_consumer.py
server/apps/core/factories/: __init__.py  file.py
server/apps/core/middleware/: __init__.py  change_cookie_middleware.py  ignore_cookie_middleware.py  jwt_cookie_authentication.py
server/apps/core/migrations/: 0001_initial.py
server/apps/core/models/: __init__.py  base.py  base_model.py  file.py  schedule_base.py  tag_base.py
server/apps/core/serializers/: __init__.py  base.py  file.py
server/apps/core/services/: __init__.py  email.py  exception_handler.py  pagination.py
server/apps/core/tasks/: __init__.py  notification.py
server/apps/core/utils/: __init__.py  authenticate.py  exception_handler.py  get_token.py  pagination.py
server/apps/core/viewsets/: __init__.py  create_destroy.py  create_read_destroy.py  create_read_update.py  create_read_update_destroy.py  create_update_destroy.py  destroy.py  list_viewset.py  read.py  read_list.py
server/apps/orders/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  viewsets.py
server/apps/orders/admin/: __init__.py  admin.py  category.py  dish.py  dish_image.py  order.py  order_and_dish.py  reservation.py  restaurant_and_order.py  stop_list.py
server/apps/orders/constants/: __init__.py  notifications.py  order.py  stop_list.py
server/apps/orders/factories/: __init__.py  category.py  dish.py  dish_image.py  dish_images.py  order.py  order_and_dish.py  order_and_dishes.py  reservation.py  restaurant_and_order.py  stop_list.py
server/apps/orders/functions/: __init__.py  check_editing_fields.py  filter_dishes.py  get_orders.py  orders.py  reservation.py
server/apps/orders/migrations/: 0001_initial.py  0002_alter_order_status_alter_orderanddish_status.py  0002_initial.py  0002_stoplist_restaurant.py  0003_alter_order_comment.py  0003_alter_order_price.py  0003_alter_orderanddish_count.py  0003_alter_orderanddish_unique_together_and_more.py  0003_alter_stoplist_unique_together.py  0003_auto_20231205_2006.py  0003_initial.py  0004_alter_order_status.py  0004_alter_orderanddish_unique_together.py  0004_auto_20231022_1550.py  0004_rename_count_quests_reservation_count_guests.py  0005_reservation_client.py  0005_reservation_client_full_name.py  0005_reservation_count_quests_reservation_tag_to_place_and_more.py  0006_alter_order_comment_alter_orderanddish_comment.py  0006_remove_reservation_count_guests_and_more.py  0006_reservation_status.py  0007_alter_order_comment_alter_orderanddish_comment_and_more.py  0007_alter_reservation_place.py  0007_reservation_client_phone_number.py  0008_reservation_created_reservation_modified.py  0009_remove_dish_compound.py
server/apps/orders/models/: __init__.py  category.py  dish.py  dish_image.py  models.py  order.py  order_and_dish.py  (+3 more)
server/apps/restaurants/: admin.py  apps.py  models.py  routing.py  serializers.py  urls.py
server/apps/reviews/: admin.py  models.py  permissions.py  serializers.py  viewsets.py
server/apps/users/: admin.py  models.py  permissions.py  refresh_urls.py  serializers.py  urls.py  views.py  viewsets.py
server/config/: api_router.py  asgi.py  celery.py  gunicorn.py  routing.py  urls.py  wsgi.py
server/config/development/: __init__.py  celery.py  drf.py  fcm.py  installed_apps.py  settings.py
server/config/production/: __init__.py
server/config/settings/: __init__.py  base.py  drf.py  installed_apps.py  local.py  production.py  settings.py
server/config/test/: __init__.py
server/scripts/: fill_sample_data.py
(+299 files in other folders)
