[tool.poetry]
name = "emenu"
version = "0.1.0"
description = ""
authors = ["Nazar <odddellarobea@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
invoke = "1.7.1"
ipdb = "0.13.9"
Werkzeug = "2.0.3"
watchfiles = "0.16.1"
rich = "12.5.1"
pytz = "2022.1"
python-slugify = "6.1.2"
Pillow = "9.1.1"
argon2-cffi = "21.3.0"
django = "3.2.16"
django-environ = "0.9.0"
django-model-utils = "4.2.0"
djangorestframework = "3.13.1"
django-cors-headers = "3.13.0"
psycopg2-binary = "2.9.3"
djangorestframework-simplejwt = "5.2.2"
gunicorn = "20.1.0"
certifi = "2022.9.24"
django-extensions = "3.1.5"
dj-database-url = "1.0.0"
factory-boy = "3.2.1"

django-stubs = {version = "1.9.0", optional = true}
pytest = {version = "7.1.2", optional = true}
pytest-sugar = {version = "0.9.4", optional = true}
pytest-django = {version = "4.5.2", optional = true}
djangorestframework-stubs = {version = "1.4.0", optional = true}
flake8 = {version = "4.0.1", optional = true}
flake8-isort = {version = "4.1.1", optional = true}
coverage = {version = "6.4.1", optional = true}
django-coverage-plugin = {version = "2.0.3", optional = true}

[tool.poetry.extras]
dev = [
    "django-stubs",
    "pytest",
    "pytest-sugar",
    "pytest-django",
    "djangorestframework-stubs",
    "flake8",
    "flake8-isort",
    "coverage",
    "django-coverage-plugin",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
